# rb1_ros2_description

./: CMakeLists.txt  README.md  package.xml
config/: rb1_controller.yaml
launch/: rb1_ros2_xacro.launch.py
xacro/: rb1_ros2_base.urdf.xacro
